differenceChecking/disaster_recovery/fsm-teller/tlr-tf-uc4-cmu-ubc-authorize.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tlr-tf-uc4-cmu-ubc-authorize
  name: tlr-tf-uc4-cmu-ubc-authorize
  namespace: fsm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tlr-tf-uc4-cmu-ubc-authorize
  template:
    metadata:
      labels:
        app: tlr-tf-uc4-cmu-ubc-authorize
    spec:
      #knodeSelector:
        #kubernetes.io/role: FSM-WORKER

      hostAliases:
      - ip: "10.90.95.52"
        hostnames:
        - "core.teresol-bahl.com"
      - ip: "10.90.95.53"
        hostnames:
        - "services.teresol-bahl.com"
        
      containers:
        - envFrom:
            - configMapRef:
                name: fsm-configmap
                #          env:
                #            - name: CORE_API_FUNDSTRANSFER
                #              value: "Y29yZS1hcGktZnVuZHN0cmFuc2ZlcmJpbGxlcjo1SUhURmw3NXF5M3hMYkQ2Skx3RVh5WnpsM0VXME52aw=="

          image: harbor.teresol.com/fsm/tlr-tf-uc4-cmu-ubc-authorize:1.2.1d
          imagePullPolicy: Always
          name: tlr-tf-uc4-cmu-ubc-authorize
          ports:
            - containerPort: 3500
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tlr-tf-uc4-cmu-ubc-authorize
  name: tlr-tf-uc4-cmu-ubc-authorize
  namespace: fsm
spec:
  ports:
    - name: "3500"
      port: 3500
      targetPort: 3500
  selector:
    app: tlr-tf-uc4-cmu-ubc-authorize
  type: ClusterIP

#################################
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tlr-tf-uc4-cmu-ubc-authorize
  namespace: fsm
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`services.teresol-bahl.com`) && PathPrefix(`/fsm/TLR_TF_UC4_CMU_UBC_Authorize`)
      kind: Rule
      middlewares:
        - name: cors-middleware
          namespace: fsm
      services:
        - kind: Service
          name: tlr-tf-uc4-cmu-ubc-authorize
          namespace: fsm
          port: 3500
  tls:
    secretName: bahl-tls-secret
